plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.107'
    id 'com.matthewprenger.cursegradle' version '1.4.0' // CurseForge uploader
    id "com.modrinth.minotaur" version "2.8.10" // Modrinth uploader
}

group = mod_group_id
version = mod_version

base {
    archivesName = "NeoForge-" + mod_id
}
repositories {
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    maven { url "https://maven.blamejared.com/" }
    maven {
        url "https://www.cursemaven.com"
        content { includeGroup "curse.maven" }
    }
    maven {
        name = 'GeckoLib'
        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
        content {
            includeGroupByRegex('software\\.bernie.*')
            includeGroup("com.eliotlash.mclib")
        }
    }
    maven { url = "https://api.modrinth.com/maven" }
    maven {
        name "nonamecrackers2Maven"
        url "https://maven.nonamecrackers2.dev/releases"
    }
    flatDir { dir 'libs' }
}


java.toolchain.languageVersion = JavaLanguageVersion.of(21)


neoForge {
    // Specify the version of NeoForge to use.
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    // accessTransformers.add('src/main/resources/META-INF/accesstransformer.cfg')

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')

            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            // Recommended logging level for the console
            // You can set various levels here.
            // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        // define mod <-> source bindings
        // these are used to tell the game which sources are for which mod
        // mostly optional in a single mod project
        // but multi mod projects should define one per mod
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}


sourceSets.main.resources { srcDir 'src/generated/resources' }
dependencies {
    implementation "curse.maven:serene-seasons-291874:6182596"
    implementation "curse.maven:glitchcore-955399:5660740"
    implementation "curse.maven:betterdays-895618:7294209"
    implementation "curse.maven:simple-clouds-1121215:6928979"
    //implementation files("libs/Serene Seasons Plus-neoforge-1.21.1-1.21.1-1.0.9.5.jar")
    implementation "curse.maven:serene-seasons-plus-1288843:7512515"
    implementation "nonamecrackers2:simplecloudsapi-neoforge:${api_version}"
    compileOnly "curse.maven:tough-as-nails-246391:5833252"
    compileOnly "curse.maven:cold-sweat-506194:7492465"
    runtimeOnly "curse.maven:sodium-394468:6382651"
    implementation "curse.maven:auroras-1105290:6040674"
    implementation "curse.maven:rainboows-1121832:6416604"
    implementation "curse.maven:gabous-libs-1367332:7195722"
    implementation "curse.maven:architectury-api-419699:5786327"
    compileOnly "curse.maven:dynamictrees-252818:7197017"
    compileOnly "curse.maven:ecliptic-seasons-1118306:6303967"
    compileOnly "curse.maven:legendary-survival-overhaul-840254:7215072"

}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [minecraft_version      : minecraft_version,
                             minecraft_version_range: minecraft_version_range,
                             neo_version            : neo_version,
                             neo_version_range      : neo_version_range,
                             loader_version_range   : loader_version_range,
                             mod_id                 : mod_id,
                             mod_name               : mod_name,
                             mod_license            : mod_license,
                             mod_version            : mod_version,
                             mod_authors            : mod_authors,
                             mod_description        : mod_description]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
modrinth {
    // Avoid failing local builds when secrets aren't present.
    def modrinthToken = System.getenv("MODRINTH_TOKEN")
    if (!modrinthToken) {
        project.logger.lifecycle("MODRINTH_TOKEN not set; Modrinth publish tasks will be disabled.")
        tasks.matching { it.name.toLowerCase().contains("modrinth") }.configureEach { enabled = false }
    }
    token = modrinthToken
    projectId = "qIWoLcKJ" // from your Modrinth project URL
    versionNumber = "NeoForge-${project.version}"
    versionName = "Project Atmosphere ${mod_version}"
    changelog = rootProject.file("PAchangelog.md").text
    gameVersions = ["1.21.1"]
    loaders = ["neoforge"]
    versionType = "beta"
    dependencies {
        required.project "e0bNACJD"
        required.project "4Al4H3t9"
        optional.project "LtZfKhel"
    }
    uploadFile = file("build/libs/${archivesBaseName}-${version}.jar")
}
def curseforgeToken = System.getenv("CURSEFORGE_TOKEN")
if (!curseforgeToken) {
    project.logger.lifecycle("CURSEFORGE_TOKEN not set; CurseForge upload tasks will be disabled.")
    tasks.matching { it.name.toLowerCase().contains("curseforge") }.configureEach { enabled = false }
} else {
    curseforge {
        apiKey = curseforgeToken

        project {
            id = "1258344"
            changelog = rootProject.file("PAchangelog.md")
            releaseType = "beta" // options: alpha, beta, release
            addGameVersion "1.21.1"
            addGameVersion "NeoForge"
            mainArtifact(file("build/libs/${archivesBaseName}-${version}.jar")) {
                displayName = "NeoForge-${version}"
            }
        }
    }
}
import groovy.json.JsonOutput
tasks.register("discordWebhook") {
    doLast {
        def webhookUrl = System.getenv("DISCORD_WEBHOOK_URL")
        def changelogText = rootProject.file("PAchangelog.md").text

        def payload = [
                username: "Build Bot",
                allowed_mentions: [ parse: ["roles"] ],
                content: "**New release published!** 🎉\n" +
                        "<@&1401956072784269443>\n" + // role mention
                        "Project: ${mod_name}\n" +
                        "Version: v${project.mod_version}-1.21.1\n\n" +
                        "${changelogText.take(1891)}"
        ]

        println "Sending release notification to Discord..."
        def connection = new URL(webhookUrl).openConnection()
        connection.with {
            doOutput = true
            requestMethod = "POST"
            setRequestProperty("Content-Type", "application/json")
            outputStream.withWriter("UTF-8") { it << JsonOutput.toJson(payload) }
            println "Webhook sent with response code: ${responseCode}"
        }
    }
}
